<resources>
    <string name="app_name">NeedDrummer</string>

    <!-- Common  -->
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="looking">Ищу:</string>
    <string name="looking_for_band">Ищу группу</string>
    <string name="looking_for_musician">Ищу музыканта</string>
    <string name="playing">Играю на:</string>
    <string name="back">Назад</string>


    <!--    Bottom nav menu -->
    <string name="account">Аккаунт</string>
    <string name="bands">Группы</string>
    <string name="musicians">Музыканты</string>

    <!--  Errors  -->
    <string name="auth_error">Ошибка авторизации</string>
    <string name="internal_error">Внутренняя ошибка программы</string>
    <string name="register_error">Ошибка регистрации</string>
    <string name="remember_pass_error">Ошибка восстановления пароля</string>
    <string name="wrong_email">Введен неверный email</string>
    <string name="wrong_email_or_pass">Введены неверные email и/или пароль</string>
    <string name="enter_name">Введите пожалуйста имя</string>
    <string name="enter_email">Введите пожалуйста email</string>
    <string name="enter_pass">Введите пожалуйста пароль</string>
</resources>